# ThorRender

./: .gitignore  .gitmodules  CMakeLists.txt  ThorRender.sln  ThorRender.vcxproj
Scripts/: CompileShaders.bat
Source/Assets/Shaders/: BlinnPhong.pshader  BlinnPhong.vshader  Triangle.pshader  Triangle.vshader
Source/Engine/: BaseTypes.h  Camera.h  Object.cpp  Object.h  Simulation.cpp  Simulation.h
Source/Graphics/: Camera.h  HelperFunctions.h  Material.h  Mesh.cpp  Mesh.h  MeshPipeline.cpp  MeshPipeline.h
Source/IO/: Files.h
Source/Simulations/DebugTriangle/: DebugTriangle.h  DebugTriangleSimulation.cpp  DebugTriangleSimulation.h
Source/Simulations/MeshTest/: MeshTestSimulation.cpp  MeshTestSimulation.h
Temp/Shaders/: BlinnPhong_ps.dxil  BlinnPhong_vs.dxil  Triangle_ps.dxil  Triangle_vs.dxil
ThorRender/: Main.cpp  ThorRender.vcxproj  ThorRender.vcxproj.filters  packages.config  pch.h
source/: Main.cpp
